@@ -26,6 +26,7 @@ Bug fixes
  * Rename documents listing column 'uploaded' to 'created' (LB (Ben Johnston))
  * Submenu items longer then the page height are no longer broken by the submenu footer (Igor van Spengen)
  * Unbundle the l18n library as it was bundled to avoid installation errors which have been resolved (Matt Westcott)
+ * Prevent error when comparing pages that reference a model with a custom primary key (Fidel Ramos)
 
 
 Upgrade considerations
